--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-   <title> sodkasodko</title>
+   <title> </title>
 </head>
 <body>
-    <h1 class = "main-header"> This is a Test</h1>
-    <h2> Test</h2>
+    <h1 class = "main-header"> Queen Elizabeth dies?</h1>
+    <h2 class="cool"> Thats crazy </h2>
+    <a class = "queen" a href= https://www.nbcnews.com/news/world/live-blog/live-updates-thousands-line-queen-elizabeth-lie-state-westminster-hall-rcna47842> Queen </a> 
+    <img src = "queen.jpg">
 </body>
 </html>
+
