--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
    <title> </title>
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1 class = "main-header"> Queen Elizabeth dies?</h1>
-    <h2 class="cool"> Thats crazy </h2>
-    <a class = "queen" a href= https://www.nbcnews.com/news/world/live-blog/live-updates-thousands-line-queen-elizabeth-lie-state-westminster-hall-rcna47842> Queen </a> 
-    <img src = "queen.jpg">
+    <div body class = "image:"> </div>
+        <h1 class = "main-header"> Queen Elizabeth dies</h1>
+        <h2 class="cool"> Queen of England dead at Age 96 </h2>
+        <a class = "queen2" a href= https://www.nbcnews.com/news/world/live-blog/live-updates-thousands-line-queen-elizabeth-lie-state-westminster-hall-rcna47842> Queen </a> 
+        <img id = "queen" src= "queen.jpg">  
 </body>
 </html>
 
