--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div body class = "image:"> </div>
-        <h1 class = "main-header"> Queen Elizabeth dies</h1>
+    <div class = "image:"> </div>
+        <h1 class = "main-header"> Kool Blogpost </h1>
         <h2 class="cool"> Queen of England dead at Age 96 </h2>
-        <a class = "queen2" a href= https://www.nbcnews.com/news/world/live-blog/live-updates-thousands-line-queen-elizabeth-lie-state-westminster-hall-rcna47842> Queen </a> 
-        <img id = "queen" src= "queen.jpg">  
+        <h3 class = "queen2"> <a href = "https://www.nbcnews.com/news/world/live-blog/live-updates-thousands-line-queen-elizabeth-lie-state-westminster-hall-rcna47842/"> link </a> 
+        <p> Thats crazy jasiodjasoidjaiosdjaiodjaoidjadasdsadsdad</p>
+            <img id = "queen" src= "queen.jpg">  
 </body>
 </html>
 
