--- a/index.html
+++ b/index.html
@@ -11,12 +11,18 @@
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class = "image:"> </div>
-        <h1 class = "main-header"> Kool Blogpost </h1>
-        <h2 class="cool"> Queen of England dead at Age 96 </h2>
-        <h3 class = "queen2"> <a href = "https://www.nbcnews.com/news/world/live-blog/live-updates-thousands-line-queen-elizabeth-lie-state-westminster-hall-rcna47842/"> link </a> 
-        <p> Thats crazy jasiodjasoidjaiosdjaiodjaoidjadasdsadsdad</p>
+    <div class = "image"> </div>
+        <h1 class = "text"> Kool Blogpost </h1>
+        <h2 class="text"> Queen of England dead at Age 96 </h2>
+        <h3 class = "link"> <a href = "https://www.nbcnews.com/news/world/live-blog/live-updates-thousands-line-queen-elizabeth-lie-state-westminster-hall-rcna47842/"> Article About Queen </a> 
+        <p> Queen of England has died, thousands line up to mourn the salute the Queen at her coffin.British schoolchildren get a 2 week holiday to mourn the death of the Queen. Her eldest son Charles III is now the King of England.</p>
             <img id = "queen" src= "queen.jpg">  
+    <h3 class = "text2"> Rapper Gunna gets arrested</h3>
+    <img id = "Gunna" src= "Gunna.jpg">
+    <p> The famous rapper Gunna was arrested May 21st over participating in street gang activites, and there are 56 counts of illegal activity against him. </p>
+    <h4 class = "text3"> Rapper PnB Rock shot and killed</h4>
+    <img id = "pnbrock" src="pnbrock.jpg">
+    <p> 30 year-old PnB Rock was killed after being robbed at a Roscoe's chicken and waffles in LA in front of his girlfriend.</p>
 </body>
 </html>
 
