--- a/index.html
+++ b/index.html
@@ -12,17 +12,16 @@
 </head>
 <body>
     <div class = "image"> </div>
-        <h1 div class = "text3"> Kool Blogpost </h1>
-        <h2 div class="text3"> Queen of England dead at Age 96 </h2>
-        <h3 div class = "link"> <a href = "https://www.nbcnews.com/news/world/live-blog/live-updates-thousands-line-queen-elizabeth-lie-state-westminster-hall-rcna47842/"> Article About Queen </a> 
-        <div class = "paragraph" p> Queen of England has died, thousands line up to mourn the salute the Queen at her coffin.British schoolchildren get a 2 week holiday to mourn the death of the Queen. Her eldest son Charles III is now the King of England.</p>
-            <img id = "queen" src= "queen.jpg">  
-    <h3 class = "text3"> Rapper Gunna gets arrested</h3>
-    <img id = "Gunna" src= "Gunna.jpg">
-    <div class = "paragraph2" p> The famous rapper Gunna was arrested May 21st over participating in street gang activites, and there are 56 counts of illegal activity against him. </div>
-    <h4 class = "text3"> Rapper PnB Rock shot and killed</h4>
-    <img id = "pnbrock" src="pnbrock.jpg">
-    <div class = "paragraph3" p> 30 year-old PnB Rock was killed after being robbed at a Roscoe's chicken and waffles in LA in front of his girlfriend.</p>
+        <h1 div class = "text3"> Top 3 Mobile Games of our childhood </h1>
+        <h2 div class="text3"> #3: Subway Surfers </h2>
+        <div class = "paragraph" p> Subway Surfers was a game everyone played in their childhood. The gameplay was fun when you can grind coins or keys and try to get as high of a score as possible. The later it gets, the faster it gets which makes it challenging. There was also many cool skins and powerups. </p>
+            <img id = "subwaysurfers" src= "subbb.jpg">  
+    <h3 class = "text3"> #2: Clash Royale</h3>
+    <img id = "cr" src= "cr.jpg">
+    <div class = "paragraph2" p> Clash Royale was a card stratergy game that was fun as a kid. It was a game that required stratergy and thinking to create a strong deck and stratergy in game in order to win and climb trophies, and there was over 100 cards, which leads to a lot of creative gameplay. </h4>
+    <h4 class = "text3"> #1: Brawl Stars</h4>
+    <img id = "brawlstars" src="brawlstars.jpg">
+    <div class = "paragraph3" p> Brawl Stars was the best mobile game, as it was like Clash Royale, but with shooter aspects. There are a large variety of game modes, such as Gem Grab, Showdown, Heist, and Bounty. There are many characters, all with their different abilites and skills. The game also never got old, as there was always something to progress in the Trophy Road.</p>
 </body>
 </html>
 
