--- a/index.html
+++ b/index.html
@@ -10,18 +10,35 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
 </head>
-<body>
-        <h1 div class = "text1"> Top 3 Mobile Games of our childhood </h1>
-        <h2 div class="text1"> #3: Subway Surfers </h2>
-        <div class = "text1" > Subway Surfers was a game everyone played in their childhood. The gameplay was fun when you can grind coins or keys and try to get as high of a score as possible. The later it gets, the faster it gets which makes it challenging. There was also many cool skins and powerups. </p>
-            <img id = "subwaysurfers" src= "surfers.jpg">  
-    <h3 class = "text2"> #2: Clash Royale</h3>
-    <img id = "cr" src= "cr.jpg">
-    <div class = "text2"> Clash Royale was a card stratergy game that was fun as a kid. It was a game that required stratergy and thinking to create a strong deck and stratergy in game in order to win and climb trophies, and there was over 100 cards, which leads to a lot of creative gameplay. </h4>
-    <img id = "brawlstars" src="brawlstars.jpg">
-    <div class = "text3">
-        <h4> #1: Brawl Stars</h4>
-         Brawl Stars was the best mobile game, as it was like Clash Royale, but with shooter aspects. There are a large variety of game modes, such as Gem Grab, Showdown, Heist, and Bounty. There are many characters, all with their different abilites and skills. The game also never got old, as there was always something to progress in the Trophy Road.
+<body>  
+    <h1> Top 3 Mobile Games</h1>
+    <div class = "words"> 
+    <p> #3: Subway Surfers <p>
+        <a href = "https://subwaysurfers.com/"> 
+    <img src= "surfers.jpg" style= "width: 60%;"> </a>
+        <div class = "paragraph" > Subway Surfers was a game everyone played in their childhood. The gameplay was fun when you can grind coins or keys and try to get as high of a score as possible. The later it gets, the faster it gets which makes it challenging. There was also many cool skins and powerups. </p>  
+            </div>
+        </div>
+   </div>
+        
+    <div class = "words"> 
+    <p> #2: Clash Royale <p>
+        <a href = "https://clashroyale.com/"> </a>
+    <img src= "cr.jpg" style= "width:40%;">
+    <div class = "paragraph"> 
+        <p> Clash Royale was a card stratergy game that was fun as a kid. It was a game that required stratergy and thinking to create a strong deck and stratergy in game in order to win and climb trophies, and there was over 100 cards, which leads to a lot of creative gameplay. </p>
+        </div>
+    </div>
+    <div class = "words"> 
+    <p> #1: Brawl Stars</p>
+    <a href ="https://blog.brawlstars.com/:"> </a>"
+    <img src="brawlstars.jpg" style="width:60%;">
+    <div class = "paragraph">
+        <p> #1: Brawl Stars</h4>
+         Brawl Stars was the best mobile game, as it was like Clash Royale, but with shooter aspects. There are a large variety of game modes, such as Gem Grab, Showdown, Heist, and Bounty. There are many characters, all with their different abilites and skills. The game also never got old, as there was always something to progress in the Trophy Road.</p>
+         </div>
+    </div>
+    
 </body>
 </html>
 
