--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
     <div class = "words"> 
     <p> #1: Brawl Stars</p>
-    <a href ="https://blog.brawlstars.com/:"> 
+    <a href ="https://blog.brawlstars.com:"> 
     <img src="brawlstars.jpg" style="width:60%;"> </a>
     <div class = "paragraph">
         <p> #1: Brawl Stars</h4>
